Adds register.html

--- a/voting/templates/login.html
+++ b/voting/templates/login.html
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="static/main.css">
+<link rel="stylesheet" href="static/mainlogin.css">
 <div class="login">
   <h1>Login to Web App</h1>
   <form method="post" action="">
@@ -7,7 +7,7 @@
     <p><input type="password" name="password" value="" placeholder="Password"></p>
     <p class="remember_me">
     </p>
-    <p class="SignUp"><input type="submit" name="commit" value="Signup"></p>
+    <p class="SignUp"><a href="/register">SignUp</a></p>
     <p class="submit"><input type="submit" name="commit" value="Login"></p>
   </form>
 </div>
