Modified Register page

--- a/voting/templates/reg.html
+++ b/voting/templates/reg.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="static/mainreg.css">
 <div class="register">
   <h1>Login to Web App</h1>
-  <form method="post" action="/">
+  <form method="post" action="/register">
     <p><input type="text" name="Username" value="" placeholder="Username"></p>
-    <p><input type="text" name="email" value="" placeholder="Username"></p>
+    <p><input type="text" name="email" value="" placeholder="email"></p>
     <p><input type="password" name="password" value="" placeholder="Password"></p>
    
     <p class="Signin"><a href="/">Already have an Account? SignIn</a></p>
