--- a/voting/templates/login.html
+++ b/voting/templates/login.html
@@ -3,10 +3,9 @@
 <div class="login">
   <h1>Login to Web App</h1>
   <form method="post" action="">
-    <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
+    <p><input type="text" name="login" value="" placeholder="Username"></p>
     <p><input type="password" name="password" value="" placeholder="Password"></p>
-    <p class="remember_me">
-    </p>
+    
     <p class="SignUp"><a href="/register">SignUp</a></p>
     <p class="submit"><input type="submit" name="commit" value="Login"></p>
   </form>
