--- a/voting/templates/polls.html
+++ b/voting/templates/polls.html
@@ -1,5 +1,10 @@
-<html>
-<body>
-Hello World
-</body>
-</html>
+<div class="polls">
+  <h1>Polls {{ID}}</h1>
+  <form method="post" action="">
+    <p><input type="text" name="login" value="" placeholder="Username"></p>
+    <p><input type="password" name="password" value="" placeholder="Password"></p>
+    
+    <p class="SignUp"><a href="/register">SignUp</a></p>
+    <p class="submit"><input type="submit" name="commit" value="Login"></p>
+  </form>
+</div>
