--- a/voting/templates/create_poll.html
+++ b/voting/templates/create_poll.html
@@ -3,7 +3,10 @@
   <form method="post" action="">
     <p><input type="text" name="poll_name" value="" placeholder="Poll_Name"></p>
     <p><input type="number" name="no_of_options" value="" placeholder="No_Of_Options" min="2" max="10"></p>
-    
+    <p>Enter the options for the poll in separate lines</p>
+    <p><textarea name="options"></textarea></p>
+    <p>Select the dedadline for the poll</p>
+    <p><input type="date" name="deadline"></p>
     <p class="submit"><input type="submit" name="commit" value="Submit"></p>
   </form>
 </div>
