--- a/voting/templates/polls.html
+++ b/voting/templates/polls.html
@@ -2,6 +2,8 @@
   <h1>Polls {{ID}}</h1>
   <form method="post" action="">
     <div>
-    <p class="submit"><input type="submit" name="commit" value="CREATE POLL"></p>
+    <p class="submit"><input type="submit" name="commit_create" value="CREATE POLL"></p>
+    <p class="submit"><input type="submit" name="commit_view" value="VIEW POLLS"></p>
     </div>
 </div>
+
