--- a/voting/templates/reg.html
+++ b/voting/templates/reg.html
@@ -2,9 +2,9 @@
 <div class="register">
   <h1>Login to Web App</h1>
   <form method="post" action="/register">
-    <p><input type="text" name="Username" value="" placeholder="Username"></p>
-    <p><input type="text" name="email" value="" placeholder="email"></p>
-    <p><input type="password" name="password" value="" placeholder="Password"></p>
+    <p><input type="text" name="Username" value="" placeholder="Username" required></p>
+    <p><input type="text" name="email" value="" placeholder="email" required></p>
+    <p><input type="password" name="password" value="" placeholder="Password" required></p>
    
     <p class="Signin"><a href="/">Already have an Account? SignIn</a></p>
     <p class="submit"><input type="submit" name="commit" value="Signup"></p>
