--- a/voting/templates/poll_details.html
+++ b/voting/templates/poll_details.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html>
+<body>
+<script>
+document.getElementById("demo").innerHTML = 
+"The full URL of this page is:";
+</script>
 <div class="poll details">
 </div>
+
+
+
 <p>
 {{pollname}}
 
@@ -18,8 +28,54 @@ List of Options
       </tr>
 </p>
       {% endfor %}
-      
-      
+<p> 
+--------------------
+
+</p>
+
+<p>
+Get link for the poll
+</p>
+<p>
+--------------------
+</p>
+
+ 
+   
+
+
+<p><input type="text" id="txt"></p>
+<script>
+let a = window.location.href;
+let b = a.split("/")
+let c = b.length
+let d = ""
+for(i=0;i<c-2;i++){
+d=d+b[i] + "/"
+}
+d = d + "edit_poll"
+d = d + "/" + "{{pid}}"
+document.getElementById("txt").value = 
+d;
+</script>
+
+<script>
+function myFunction() {
+  var copyText = document.getElementById("txt");
+
+  copyText.select();
+  copyText.setSelectionRange(0, 99999); /* For mobile devices */
+
+  document.execCommand("copy");
+
+  alert("Copied the text: " + copyText.value);
+}
+</script>
+
+<button onclick="myFunction()">Copy text</button>
 
 
 
+
+</body>
+</html>
