--- a/voting/templates/poll_details.html
+++ b/voting/templates/poll_details.html
@@ -44,7 +44,7 @@ Get link for the poll
    
 
 
-<p><input type="text" id="txt"></p>
+<p><input type="text" id="txt" readonly></p>
 <script>
 let a = window.location.href;
 let b = a.split("/")
