--- a/voting/templates/view_polls.html
+++ b/voting/templates/view_polls.html
@@ -1,5 +1,27 @@
 <div class="create_polls">
 View Polls
+
+<script>
+window.onunload = function(){};
+</script>
+
+{% if session['name'] %}
+<div></div>
+{% else %}
+<script>
+
+alert("You are logged out");
+let url = window.location.href;
+let b = url.split("/")
+let c = b.length
+let d = ""
+for(i=0;i<c-3;i++){
+d=d+b[i] + "/"
+}
+window.location.replace(d);
+
+</script>
+{% endif %}
 </div>
 {% for id, owner, poll_name, deadline in polls%}
 <p>
