--- a/voting/templates/edit_poll.html
+++ b/voting/templates/edit_poll.html
@@ -1,12 +1,109 @@
-<html>
-<body>
+<style>
 
-<div class="edit poll">
-</div>
+body {
+  font: 13px/20px "Lucida Grande", Tahoma, Verdana, sans-serif;
+  color: #404040;
+  background: #0ca3d2;
+}
+
+.editpoll {
+  position: relative;
+  margin: 30px auto;
+  padding: 20px 20px 20px;
+  width: 400px;
+  background: white;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 0 200px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 200px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.editpoll:before {
+  content: '';
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  bottom: -8px;
+  left: -8px;
+  z-index: -1;
+  background: rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
+}
+
+.editpoll h1 {
+  margin: -20px -20px 21px;
+  line-height: 40px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #555;
+  text-align: center;
+  text-shadow: 0 1px white;
+  background: #f3f3f3;
+  border-bottom: 1px solid #cfcfcf;
+  border-radius: 3px 3px 0 0;
+  background-image: -webkit-linear-gradient(top, whiteffd, #eef2f5);
+  background-image: -moz-linear-gradient(top, whiteffd, #eef2f5);
+  background-image: -o-linear-gradient(top, whiteffd, #eef2f5);
+  background-image: linear-gradient(to bottom, whiteffd, #eef2f5);
+  -webkit-box-shadow: 0 1px whitesmoke;
+  box-shadow: 0 1px whitesmoke;
+}
+
+.editpoll label {
+font-size: 16px;
+font-weight: bold;
+}
+
+.editpoll p {
+  margin: 20px 0 0;
+  font-size: 20;
+}
+
+.editpoll p:first-child {
+  margin-top: 0;
+}
+
+.editpoll input[type=text], .login input[type=password] {
+  width: 278px;
+}
+
+.editpoll p.submit {
+  text-align: center;
+  width: 60;
+  height: 40;
+  font-size: 32px;
+  margin-left: 50%;
+            transform: translateX(-50%);
+
+            border: none;
+            outline: none;
+            
+            cursor: pointer;
+            
+            text-transform: uppercase;
+            color: white;
+            border-radius: 4px;
+            transition: .3s;
+}
+
+
+.editpoll form .submit:hover{
+            opacity: 0.7;
+        }
+
+
+</style>
+
+
+
+<div class="editpoll">
+
+
+<h1>CAST YOUR VOTE!</h1>
 
 <p>
+<label>Q.
 {{pollname}}
-
+</label>
 </p>
 
 <p>
@@ -38,7 +135,9 @@ window.location.replace(d);
 
 </script>
 <p> ---------------- </p>
-
+<label>List of Options</label>
+<p></p>
+<label>
 {% for column_name1 in row1%}
       <tr>
         <td> {{column_name1}} </td> 
@@ -46,7 +145,7 @@ window.location.replace(d);
 <br>
       </tr>
       {% endfor %}
-      
+</label>
       <p class="submit"><input type="submit" onclick="Function1()" name="commit" value="Vote"></p>
       <script>
       function Function1() {
@@ -56,8 +155,6 @@ window.location.replace(d);
       </script>
 
 </form> 
-</body>
-</html>
-      
+</div>
 
 
