--- a/voting/templates/index.html
+++ b/voting/templates/index.html
@@ -1,7 +1,7 @@
 
 <link rel="stylesheet" href="static/mainlogin.css">
 <div class="login">
-  <h1>Login to Web App</h1>
+  <h1>Login</h1>
   <form method="post" action="">
     <p><input type="text" name="login" value="" placeholder="Username" required></p>
     <p><input type="password" name="password" value="" placeholder="Password" required></p>
