--- a/voting/templates/reg.html
+++ b/voting/templates/reg.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="static/mainreg.css">
 <div class="register">
-  <h1>Login to Web App</h1>
+  <h1>Register</h1>
   <form method="post" action="/register">
     <p><input type="text" name="Username" minlength="4" maxlength="10" value="" placeholder="Username" required></p>
     <p><input type="text" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" title="Please provide a valid e-mail address" value="" placeholder="email" required></p>
