--- a/voting/templates/index.html
+++ b/voting/templates/index.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="static/mainlogin.css">
 <div class="login">
   <h1>Login</h1>
+ <p style="color:red"> {{message}}</p>
   <form method="post" action="">
     <p><input type="text" name="login" value="" placeholder="Username" required></p>
     <p><input type="password" name="password" value="" placeholder="Password" required></p>
