--- a/voting/templates/poll_details.html
+++ b/voting/templates/poll_details.html
@@ -248,7 +248,7 @@ google.charts.setOnLoadCallback(drawChart);
 function drawChart() {
 var data = google.visualization.arrayToDataTable(list1);
 // Optional; add a title and set the width and height of the chart
-var options = {'title':'Votes', 'width':400, 'height':400};
+var options = {'title':'Pie Representation', 'width':400, 'height':400};
 // Display the chart inside the <div> element with id="piechart"
 var chart = new google.visualization.PieChart(document.getElementById('piechart'));
 chart.draw(data, options);
