--- a/voting/templates/reg.html
+++ b/voting/templates/reg.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="static/mainreg.css">
 <div class="register">
   <h1>Register</h1>
+  <p style="color:red"> {{message}}</p>
   <form method="post" action="/register">
     <p><input type="text" name="Username" minlength="4" maxlength="10" value="" placeholder="Username" required></p>
     <p><input type="text" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" title="Please provide a valid e-mail address" value="" placeholder="email" required></p>
@@ -9,4 +10,4 @@
     <p class="Signin"><a href="/">Already have an Account? SignIn</a></p>
     <p class="submit"><input type="submit" name="commit" value="Signup"></p>
   </form>
-</div>
+</div>  
